[package]
name = "foo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-websockets = "0.1.4"
postgres = "0.19.2"
openssl = "0.10.38"
postgres-openssl = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pem = "1"

